# NeverSQL

./: .clang-tidy  .gitignore  Architecture.md  BUILDING.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  HACKING.md  MODULE.bazel  README.md  tools.bzl
.github/workflows/: bazel-multi-platform.yml  ci.yml  cmake-build-and-test-platform.yml
NeverSQL/data/btree/: BTreePageHeader.h
NeverSQL/data/internals/: MetaPage.h  PageUtilities.h
applications/: BUILD  CMakeLists.txt  ReadWAL.cpp  data-access-layer-example.cpp  data-manager-example.cpp  database-string-pk.example.cpp  driver.cpp  hex-dump.cpp  store-shakespeare.cpp
cmake/: dev-mode.cmake  install-config.cmake  install-rules.cmake  variables.cmake
include/NeverSQL/: NeverSQL.hpp
include/NeverSQL/containers/: FixedStack.h
include/NeverSQL/data/: DataAccessLayer.h  Document.h  FreeList.h  Page.h  PageCache.h
include/NeverSQL/data/btree/: BTree.h  BTreeNodeMap.h  BTreePageHeader.h  EntryCopier.h  EntryCreator.h
include/NeverSQL/data/internals/: DatabaseEntry.h  DocumentPayloadSerializer.h  EntryPayloadSerializer.h  KeyComparison.h  KeyPrinting.h  Meta.h  OverflowEntry.h  SinglePageEntry.h  SpanPayloadSerializer.h  Utility.h
include/NeverSQL/database/: DataManager.h  Query.h
include/NeverSQL/recovery/: WriteAheadLog.h
include/NeverSQL/utility/: DataTypes.h  Defines.h  DisplayTable.h  HexDump.h  PageDump.h
neversql/: BUILD
neversql/containers/: FixedStack.h
neversql/data/: DataAccessLayer.cpp  DataAccessLayer.h  Document.cpp  Document.h  FreeList.cpp  FreeList.h  Page.cpp  Page.h  PageCache.cpp  PageCache.h
neversql/data/btree/: BTree.cpp  BTree.h  BTreeNodeMap.cpp  BTreeNodeMap.h  BTreePageHeader.h  EntryCopier.cpp  EntryCopier.h  EntryCreator.cpp  EntryCreator.h
neversql/data/internals/: DatabaseEntry.cpp  DatabaseEntry.h  DocumentPayloadSerializer.cpp  DocumentPayloadSerializer.h  KeyComparison.h  KeyPrinting.h  Meta.h  OverflowEntry.cpp  OverflowEntry.h  SinglePageEntry.h  SpanPayloadSerializer.h  Utility.h
neversql/database/: DataManager.cpp  DataManager.h  Query.h  Transaction.h
neversql/frontend/: Repl.cpp  Repl.h
neversql/recovery/: WriteAheadLog.cpp  WriteAheadLog.h
neversql/utility/: DataTypes.h  DisplayTable.cpp  DisplayTable.h  HexDump.cpp  PageDump.cpp  PageDump.h
source/: NeverSQL.cpp
source/NeverSQL/data/: DataAccessLayer.cpp  Document.cpp  FreeList.cpp  Page.cpp  PageCache.cpp
source/NeverSQL/data/btree/: BTree.cpp  BTreeNodeMap.cpp  EntryCopier.cpp  EntryCreator.cpp
source/NeverSQL/data/internals/: DatabaseEntry.cpp  DocumentPayloadSerializer.cpp  OverflowEntry.cpp
source/NeverSQL/database/: DataManager.cpp
source/NeverSQL/recovery/: WriteAheadLog.cpp
source/NeverSQL/utility/: DisplayTable.cpp  HexDump.cpp  PageDump.cpp
source/data/: DataAccessLayer.cpp  FreeList.cpp
source/data/btree/: BTree.cpp  BTreeNodeMap.cpp
source/utility/: HexDump.cpp
test/: CMakeLists.txt  UT_Document.cpp  UT_FixedStack.cpp
test/regtest/: BUILD  strings_db.cpp
test/unittest/: BUILD
